# wgsl-app

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
assets/: main.css
assets/shaders/: fragment.wgsl  vertex.wgsl
assets/style/: tool_bar.css
assets/styles/: global.css  header.css  main.css  notification.css  settings_editor.css  text_editor.css  tool_bar.css  wgpu_canvas.css
docs/: todo.md
src/: components.rs  main.rs
src/components/: header.css  header.rs  mod.rs  notification.rs  settings_editor.rs  text_editor.rs  tool_bar.rs  wgpu_canvas.rs
src/wgpu_render/: common.rs  mod.rs  native_wgpu_render.rs  web_wgpu_render.rs
