[package]
name = "wgsl-app"
version = "0.1.0"
authors = ["Tristan Phease <tristan.phease@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = "1"
dioxus = "0.7"
dioxus-native = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
wgpu = "26.0"
winit = "0.30"
web-sys = { version = "0.3", optional = true, features = ["HtmlCanvasElement"] }
anyhow = "1.0"
dioxus-sdk-time = { version = "0.7" }

[features]
default = []
# for running on the web
web = ["dioxus/web", "dep:web-sys", "wgpu/webgpu"]
desktop = ["native", "tracing"]
native = ["dioxus/native", "dep:dioxus-native", "dep:futures"]
mobile = ["dioxus/mobile", "native"]
tracing = ["dep:tracing-subscriber", "dioxus-native/tracing"]
